# interceptiq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  star_accounts.py  star_repo.py
.github/workflows/: ci.yml
docs/: agent-workflow.md  share-posts.md
docs/demo/: index.html
docs/examples/: real-world-demo.md
docs/submission/: description.md  form-answers.md
examples/: intercept.example.json  items.raw.jsonl
scripts/: set-github-topics.sh
src/interceptiq/: __init__.py  agent_report.py  cli.py  dom_analyze.py  jsonl_pipeline.py  payload_analyze.py  replay_generate.py
tests/: test_pipeline.py
